fix btn alignment

--- a/user.css
+++ b/user.css
@@ -150,7 +150,7 @@ section {
 }
 #mc_embed_signup .button {
     background-color: #0088CC !important;
-    margin-top: -8px;
+    margin-top: -8px !important;
 }
 #mc_embed_signup .button:hover {
     background-color: #2165B6 !important;
